--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,15 +2,7 @@
 name: Documentation builder
 
 on:
-  push:
-    branches:
-      - main
-      # Release branches
-      - "[0-9]+.[0-9]+.X"
-  pull_request:
-    branches:
-      - main
-      - "[0-9]+.[0-9]+.X"
+  workflow_dispatch:
 
 jobs:
   # Build the documentation against the minimum version of the dependencies
