--- a/.github/workflows/labeler-title-regex.yml
+++ b/.github/workflows/labeler-title-regex.yml
@@ -1,7 +1,6 @@
 name: Pull Request Regex Title Labeler
 on:
-  pull_request_target:
-    types: [opened, edited]
+  workflow_dispatch:
 
 permissions:
   contents: read
