--- a/.github/workflows/trigger-hosting.yml
+++ b/.github/workflows/trigger-hosting.yml
@@ -1,11 +1,7 @@
 # Workflow to trigger the jobs that will host the documentation
 name: Documentation push trigger
 on:
-  workflow_run:
-    # Run the workflow after the separate "Documentation builder" workflow completes
-    workflows: [Documentation builder]
-    types:
-      - completed
+  workflow_dispatch:
 
 jobs:
   push:
