--- a/.github/workflows/unassign.yml
+++ b/.github/workflows/unassign.yml
@@ -1,8 +1,7 @@
 name: Unassign
 #Runs when a contributor has unassigned themselves from the issue and adds 'help wanted'
 on:
-  issues:
-    types: unassigned
+  workflow_dispatch:
 
 jobs:
   one:
