--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -2,26 +2,13 @@
 name: Wheel builder
 
 on:
-  schedule:
-    # Nightly build at 3:42 A.M.
-    - cron: "42 3 */1 * *"
-  push:
-    branches:
-      - main
-      # Release branches
-      - "[0-9]+.[0-9]+.X"
-  pull_request:
-    branches:
-      - main
-      - "[0-9]+.[0-9]+.X"
-  # Manual run
   workflow_dispatch:
 
 jobs:
   # Check whether to build the wheels and the source tarball
   check_build_trigger:
     name: Check build trigger
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.repository == 'scikit-learn/scikit-learn'
     outputs:
       build: ${{ steps.check_build_trigger.outputs.build }}
@@ -55,68 +42,68 @@ jobs:
             python: 38
             bitness: 64
             platform_id: win_amd64
-          - os: windows-latest
+          - os: windows-2022
             python: 39
             bitness: 64
             platform_id: win_amd64
-          - os: windows-latest
+          - os: windows-2022
             python: 310
             bitness: 64
             platform_id: win_amd64
 
           # Window 32 bit
-          - os: windows-latest
+          - os: windows-2022
             python: 38
             bitness: 32
             platform_id: win32
-          - os: windows-latest
+          - os: windows-2022
             python: 39
             bitness: 32
             platform_id: win32
 
           # Linux 64 bit manylinux2014
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             python: 38
             bitness: 64
             platform_id: manylinux_x86_64
             manylinux_image: manylinux2014
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             python: 39
             bitness: 64
             platform_id: manylinux_x86_64
             manylinux_image: manylinux2014
 
           # NumPy on Python 3.10 only supports 64bit and is only available with manylinux2014
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             python: 310
             bitness: 64
             platform_id: manylinux_x86_64
             manylinux_image: manylinux2014
 
           # MacOS x86_64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 38
             platform_id: macosx_x86_64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 39
             platform_id: macosx_x86_64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 310
             platform_id: macosx_x86_64
 
           # MacOS arm64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 38
             platform_id: macosx_arm64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 39
             platform_id: macosx_arm64
-          - os: macos-latest
+          - os: macos-11
             bitness: 64
             python: 310
             platform_id: macosx_arm64
@@ -169,7 +156,7 @@ jobs:
   # Build the source distribution under Linux
   build_sdist:
     name: Source distribution
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: check_build_trigger
     if: needs.check_build_trigger.outputs.build
 
@@ -202,7 +189,7 @@ jobs:
   # Upload the wheels and the source distribution
   upload_anaconda:
     name: Upload to Anaconda
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: [build_wheels, build_sdist]
     # The artifacts cannot be uploaded on PRs
     if: github.event_name != 'pull_request'
